fix list item bullets from overlapping images they wrap around

--- a/development/terminalfour/src/sass/ContentTypes/_content.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_content.scss
@@ -62,3 +62,8 @@ img.border {
    text-decoration: none;
  }
 }
+
+.content-inner ul li {
+	position: relative;
+  left: 1em;
+}
